# MagicalEngine

./: CMakeLists.txt  CMakeSettings.json  README.md  cmake_install.cmake
dep/windows/glfw-3.3/lib/: glfw3.lib  glfw3.pc
res/shaders/: bindlessFragment.glsl  bindlessVertex.glsl  fragment.glsl  instancedFragment.glsl  instancedVertex.glsl  vertex.glsl
src/: game_window.cpp  game_window.h  main.cpp
src/camera/: camera.cpp  camera.h
src/ecs/: ecs.h  object_pool.h
src/ecs/components/: basic_models.h  basic_shapes.h  batch_component.h  chunk_component.h  draw_component.h  input_component.h  instanced_component.h  render_type_components.h  renderable_component.h  texture_component.h
src/ecs/systems/: batch_renderer.h  chunk_system.h  indexed_renderer.h  instanced_renderer.h  renderer.h
src/game/: instance.cpp  instance.h  window.cpp  window.h
src/graphics/: buffer.h  game_window.cpp  game_window.h  mesh.h
src/graphics/buffers/: index_buffer.cpp  index_buffer.h  vertex_buffer.cpp  vertex_buffer.h
src/graphics/shaders/: shader.cpp  shader.h
src/graphics/textures/: texture.cpp  texture.h  texture_manager.h
src/input/: keyhandler.h  mousehandler.h
src/utils/: file_loader.cpp  file_loader.h  log.h  non_copyable.h  perlin_noise.cpp  perlin_noise.h  threadpool.h  timer.cpp  timer.h
