cmake_minimum_required(VERSION 3.15)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(BUILD_DIR ${CMAKE_SOURCE_DIR}/build)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BUILD_DIR}/${CMAKE_BUILD_TYPE})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BUILD_DIR}/${CMAKE_BUILD_TYPE})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${BUILD_DIR}/${CMAKE_BUILD_TYPE})

project(MagicalEngine)

file(GLOB SRC_FILES
    src/main.cpp
    )

file(GLOB HEADER_FILES 
    )

add_executable(${PROJECT_NAME} ${SRC_FILES} ${HEADER_FILES})